# LmScript

./: .gitignore  Cargo.toml  README.md  TODO.md  a.ts  jsr.json  mod.ts  model.bak  model.ts  model.ts.bak  package.json  pipeline.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.bak  tsconfig.base.json  typedoc.json  types.ts  types.ts.bak  utils.ts
.github/workflows/: maturin.yml  npm-release.yml  publish.yml  release.yml  static.yml  test.yml
apps/egui/: CHANGELOG.md  README.md  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
apps/gui/: .gitignore  CHANGELOG.md  README.md  (+4 more)
client/: .gitignore  LICENSE  README.md  jsr.json  package-lock.json  package.json
egui/: .eslintrc.cjs  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.web.json
examples/: illustrator-agent.ts  infinite-chat.ts  kitchen-sink.ts  runpod.ts  utils.ts
gui/: .eslintrc.cjs  .gitignore  .prettierignore  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gui-files/: create_logo.json  empty.json  init.json
logits/: Cargo.toml  pyproject.toml
logits/src/: lib.rs  utils.rs
logits/src/aici/: bintokens.rs  cfg.rs
notebooks/: chat_template.ipynb
runpod-serverless/: Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  start-docker.sh
runpod-serverless-sglang/: Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml
runpod-serverless-vllm/: README.md
sglang-docker/: README.md  docker-compose.yml
src/: mod.ts  sgl-fetcher.ts
(+313 files in other folders)
